[gd_scene load_steps=2 format=3 uid="uid://gameover001"]

[ext_resource type="Script" path="res://scripts/GameOverScreen.gd" id="1_script"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.2, 1)
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
text = "RESTART"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/MenuButton" to="." method="_on_menu_button_pressed"]
